add final slides